--- a/src/package.json
+++ b/src/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Praizleye/Ladi-Maji-Project/issues"
   },
-  "homepage": "https://github.com/Praizleye/Ladi-Maji-Project#readme"
+  "homepage": "https://github.com/Praizleye/Ladi-Maji-Project#readme",
+  "devDependencies": {
+    "webpack": "^5.65.0"
+  }
 }
