--- a/src/package.json
+++ b/src/package.json
@@ -2,9 +2,10 @@
   "name": "ladimajiproject",
   "version": "1.0.0",
   "description": "Ladi Maji Foundation Website aimed to go global and pro",
-  "main": "App.js",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
